--- a/TauCode/index.html
+++ b/TauCode/index.html
@@ -17,7 +17,7 @@
 <link rel="stylesheet" href="src/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>TauLang PlayGround - Program in Haryanvi</title>
+    <title>DesiCode - Program in Haryanvi</title>
   </head>
   <body>
     <div id="root"></div>
